updated css to provide image sizes and shapes, still need to align them correctly

--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
 /* Text format and size */
 * {
     font-family: 'Times New Roman', Times, serif;
+
 }
+
 
 /* HEADER + MENU */
 
 .header {
+    position: sticky;
+    top: 0;
     background-color: rgb(44, 44, 80);
     display: flex;
     justify-content: space-between;
@@ -13,6 +17,12 @@
     color: #fff;
     margin: 0;
     padding: 0 20px;
+}
+
+.header a {
+    text-decoration: none;
+    color: #fff;
+
 }
 
 .menu-icon div {
@@ -42,20 +52,53 @@
 
     background-color: rgb(44, 44, 80);
     display: flex;
+    justify-content: space-around;
 
 }
 
 .SectionOne h2 {
+    font-size: xx-large;
+    display: flex;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
         'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: white;
+    color: rgb(192, 184, 184);
+    justify-content: center;
+    align-items: center;
+    padding-left: 50px;
+    padding-bottom: 50px;
 }
 
 .SectionOne p {
+    font-size: x-large;
+    align-items: baseline;
+    padding: 150px;
     color: #fff;
+    padding-bottom: 100px;
+    padding-top: 50px;
 }
 
 /* Section Two - PROMOS */
+
+.SectionTwo {
+    margin: 20px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.SectionTwo img {
+    /* Create square image size */
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border: 10px solid rgb(51, 48, 48);
+    border-radius: 10%;
+
+
+
+}
 
 /* Section Three - ?? */
 
